nambahin Semangat gampang kok

--- a/tuesday.html
+++ b/tuesday.html
@@ -6,6 +6,6 @@
     <body>
         <h1>I love Tuesday</h1>
         <p>haloo semua</p>
-
+        <h2>Semangat ini gampang kok!</h2>
     </body>
 </html>
