semoga ngerti git

--- a/tuesday.html
+++ b/tuesday.html
@@ -6,6 +6,7 @@
     <body>
         <h1>I love Tuesday</h1>
         <p>haloo semua</p>
-
+        <p>Semoga saya mengerti cara pake git</p>
+        
     </body>
 </html>
